# Reserach_T-RO

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
BASE_PACK/GICP/lib_gicp/: CMakeLists.txt
BASE_PACK/GICP/lib_gicp/data/: GT.pcd  Local.pcd
BASE_PACK/GICP/lib_gicp/src/: align.cpp  kitti.cpp
GICP-I-SAM/config/: Params_IRAP.yaml  Params_KITTI.yaml  Params_MulRan.yaml  Params_PHAROS.yaml  Params_Sensor_MulRan.yaml
GICP-I-SAM/include/: utility.h
GICP-I-SAM/launch/: LAUNCH-PKG-IRAP.launch  LAUNCH-PKG-MulRan.launch
GICP-I-SAM/launch/include/: module_robot_state_publisher.launch  module_rviz.launch
GICP-I-SAM/launch/include/config/: rviz.rviz
GICP-I-SAM/msg/: cloud_info.msg
GICP-I-SAM/src/: featureExtraction.cpp  imageProjection_L.cpp  imageProjection_M.cpp  imageProjection_R.cpp  imuPreintegration.cpp  mapOptmization.cpp
GICP-SAM/: CMakeLists.txt  package.xml
GICP-SAM/config/: Params_IRAP.yaml  Params_MulRan.yaml  Params_Sensor_PHAROS.yaml
GICP-SAM/include/: utility.h
GICP-SAM/launch/: LAUNCH-PKG-IRAP.launch
GICP-SAM/launch/include/: module_gicp.launch  module_gicp_double.launch  module_gicp_single.launch  module_navsat.launch  module_robot_state_publisher.launch  module_rviz.launch
GICP-SAM/launch/include/config/: Params_Sensor_IRAP.yaml  rviz.rviz
GICP-SAM/src/: featureExtraction.cpp  imageProjection_L.cpp  imageProjection_M.cpp  imageProjection_R.cpp  mapOptmization.cpp
LIO-SAM/config/: params.yaml
LIO-SAM/launch/include/: module_loam.launch  module_navsat.launch
LIO-SAM/launch/include/config/: rviz.rviz
LIO-SAM/src/: mapOptmization.cpp
LeGO-LOAM/LeGO-LOAM/include/: utility.h
LeGO-LOAM/LeGO-LOAM/launch/: test.rviz
LeGO-LOAM/LeGO-LOAM/src/: mapOptmization.cpp
SC-LIO-SAM/SC-LIO-SAM/: CMakeLists.txt  package.xml
SC-LIO-SAM/SC-LIO-SAM/config/: params_mulran.yaml
SC-LIO-SAM/SC-LIO-SAM/include/: utility.h
SC-LIO-SAM/SC-LIO-SAM/launch/: run.launch  run_mulran.launch
SC-LIO-SAM/SC-LIO-SAM/src/: mapOptmization.cpp
VGICP-SAM/: CMakeLists.txt  package.xml
VGICP-SAM/config/: Params_IRAP.yaml  Params_PHAROS.yaml
VGICP-SAM/include/: utility.h
VGICP-SAM/launch/: LAUNCH-PKG-IRiS-ALL.launch  LAUNCH-PKG-IRiS.launch  LAUNCH-PKG-KITTI.launch
VGICP-SAM/launch/include/: module_gicp.launch  module_gicp_double.launch  module_gicp_single.launch  module_navsat.launch
VGICP-SAM/src/: featureExtraction.cpp  imageProjection_L.cpp  imageProjection_M.cpp  imageProjection_R.cpp  mapOptmization.cpp
include/: motion_MDL_2D.m  ngii_Plot.m  ngii_Plot_3D.m  ngii_Plot_ALL.m  ngii_Plot_OSM.m  ngii_Plot_OSM_v2.m  plot_NGII.m
launch/: LAUNCH-PKG.launch
src/: main_KITTI.py  main_MCL.py  main_TPL.py  main_VIS.py  netvlad.py  pcl_helper.py  urban.py
src/Analysis_API/: DeepLearning_Result_Plot.m  OSM_Result.m  T_RO_Img.asv  T_RO_Img.m
src/Database_API/ComplexUrbanData/: ComplexUrbanData_GTPose_Generator.m
src/Database_API/DeepLearning/: Database_Generator_DL_ALL.m  Database_Generator_DL_IRAP.m
src/Database_API/ImageGenerator/: Database_Generator_Img_IRAP.m  Database_Generator_Img_IRAP_fromRaw.m  Database_Generator_Img_IRIS.m  Database_Generator_Img_KITTI.m
src/OSM_API/: OSM_Geo_Descriptor.m  OSM_LiDAR_Descriptor.m
src/src/: LiDAR_Calibration.m
(+5 files in other folders)
